# hr_release

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: ForceTorqueSensorCalibration.action  ObjectGrasp.action  ObjectRecognition.action  RobotHumanHandoverReaching.action  RobotMoveWaypoints.action  VisionSystemCalibration.action
launch/: hr_execution_modules_bringup.launch  low_level_engine_bringup.launch
msg/: IOStatesStamped.msg
scripts/: handover_release_node.py  handover_release_test_node.py  hr_execution_modules_node.py  hr_fake_vision_system_node.py  hr_release_gui_node.py  hr_release_node.py  io_states_republisher_node.py  low_level_engine_node.py
src/hr_release/: force_torque_sensor_calibration_module.py  io_states_republisher.py  object_grasp_module.py  object_recognition_module.py  robot_commander.py  robot_human_handover_reaching_module.py  robot_move_waypoints_module.py  rosbag_manager_base.py  vision_system_manager_base.py  wrist_dynamics_base.py
src/hr_release/hr_execution_modules/: force_torque_sensor_calibration_module.py  object_grasp_module.py  object_recognition_module.py  robot_human_handover_reaching_module.py  robot_human_handover_reaching_offline_module.py  vision_system_calibration_module.py
src/hr_release/hr_release_gui/: hr_release_gui.py  hr_release_gui_base.py  hr_release_gui_block.py  hr_release_gui_main.py
src/hr_release/hr_release_modules/: force_torque_sensor_calibration_module.py  object_grasp_module.py  object_recognition_module.py  robot_human_handover_reaching_module.py  robot_human_handover_reaching_offline_module.py  robot_move_waypoints_module.py  vision_system_calibration_module.py
